--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ p {
   padding: 0;
 }
 
-.welcome,
-.first-block {
+.welcome {
   display: flex;
   justify-content: center;
   padding: 2%;
@@ -18,11 +17,12 @@ p {
 
 .modal-overlay {
   position: fixed;
-  background: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 1s;
 }
 
 .modal-window {
