--- a/style.sass
+++ b/style.sass
@@ -2,8 +2,7 @@ p
   margin: 0
   padding: 0
 
-.welcome,
-.first-block
+.welcome
   display: flex
   justify-content: center
   padding: 2%
@@ -15,11 +14,12 @@ p
 
 .modal-overlay
   position: fixed
-  background: rgba(0,0,0, .5)
   width: 100%
   height: 100%
   display: flex
   align-items: center
+  background: rgba(0,0,0, .5)
+  transition: 1s
 
 
 
