--- a/style.sass
+++ b/style.sass
@@ -18,10 +18,7 @@ p
   height: 100%
   display: flex
   align-items: center
-  background: rgba(0,0,0, .5)
-  transition: 1s
-
-
+  background: rgba(0,0,0, .8)
 
 .modal-window
   display: flex
@@ -30,8 +27,8 @@ p
   border-radius: 5px
   background: white
   opacity: 1
-  width: 50%
-  height: 80%
+  //width: 50%
+  //height: 80%
 
 .modal-title
   display: flex
