--- a/css/plugin/modal.css
+++ b/css/plugin/modal.css
@@ -1,7 +1,12 @@
+p {
+  margin: 0;
+  padding: 0;
+}
+
 .modal-overlay,
 .modal-window {
   opacity: 1;
-  z-index: 3000;
+  z-index: 10000;
 }
 
 .modal-overlay {
@@ -20,11 +25,13 @@
   border-radius: 5px;
   background: white;
   opacity: 1;
+  color: black;
 }
 
 .modal-title {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid lightgray;
   padding: 20px;
 }
@@ -35,7 +42,7 @@
 
 .modal-footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 /*# sourceMappingURL=modal.css.map */
