--- a/css/plugin/slider.css
+++ b/css/plugin/slider.css
@@ -5,11 +5,20 @@
   z-index: 1;
 }
 
+svg {
+  fill: white;
+}
+
+svg:hover {
+  fill: gray;
+  transition: 1s;
+}
+
 .slider-nav {
   position: absolute;
-  z-index: 1000;
+  z-index: 4000;
   width: 100%;
-  height: 100%;
+  height: 93vh;
   padding: 30px;
 }
 
@@ -22,7 +31,7 @@
 
 .slider {
   position: relative;
-  width: calc(100% * 5);
+  width: calc(100% * 4);
   height: inherit;
   display: flex;
   justify-content: start;
@@ -36,6 +45,7 @@
 }
 
 .slide img {
+  opacity: 0.8;
   width: 100%;
   height: inherit;
   object-fit: fill;
