--- a/css/plugin/slider.sass
+++ b/css/plugin/slider.sass
@@ -4,11 +4,18 @@
   overflow: hidden
   z-index: 1
 
+svg
+  fill: white
+
+svg:hover
+  fill: gray
+  transition: 1s
+
 .slider-nav
   position: absolute
-  z-index: 1000
+  z-index: 4000
   width: 100%
-  height: 100%
+  height: 93vh
   padding: 30px
 
 
@@ -20,7 +27,7 @@
 
 .slider
   position: relative
-  width: calc(100% * 5)
+  width: calc(100% * 4)
   height: inherit
   display: flex
   justify-content: start
@@ -32,10 +39,12 @@
   height: inherit
 
 .slide img
+  opacity: .8
   width: 100%
   height: inherit
   object-fit: fill
   object-position: 0
+
 
 
 
