--- a/css/style.sass
+++ b/css/style.sass
@@ -1,18 +1,26 @@
 html,
 body
+  height: 100vh
+  width: 100vw
   margin: 0
   padding: 0
-
-.welcome
-  display: flex
-  justify-content: center
-  padding: 2%
+  color: white
 
 .open-modal
-  border-radius: 15px
+  margin-top: 50vh
 
 .navbar
   height: 7vh
+
+.hello
+  padding: 100px
+  height: 100%
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+
+
 
 
 
