--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body {
   width: 100vw;
   margin: 0;
   padding: 0;
-  color: white;
 }
 
 .navbar {
@@ -30,6 +29,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  padding: 5%;
 }
 
 .title {
