--- a/css/style.sass
+++ b/css/style.sass
@@ -4,7 +4,6 @@ body
   width: 100vw
   margin: 0
   padding: 0
-  color: white
 
 .navbar
   height: 7vh
@@ -14,11 +13,14 @@ body
   width: 100%
   justify-content: center
 
+
 .absolute-container
   position: absolute
   z-index: 9000
   width: 60%
   height: 93vh
+
+
 
 .center-window
   height: 100%
@@ -26,6 +28,8 @@ body
   flex-direction: column
   align-items: center
   justify-content: space-between
+  padding: 5%
+
 
 .title
   text-align: center
